--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,15 @@
       <ion-icon color="warning" name="bar-chart-outline"></ion-icon>
       <ion-label>Progreso</ion-label>
     </ion-tab-button>
-  </ion-tab-bar>
+ 
+
+  <ion-tab-button tab="sucursal">
+    <ion-icon color="primary" name="storefront"></ion-icon>
+    <ion-label>Sucursal</ion-label>
+  </ion-tab-button>
+
+
+
+</ion-tab-bar>
 
 </ion-tabs>
