--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,38 +9,53 @@
 <ion-content>
 
 
-  <ion-card>
-    <ion-card-content>
+
+
+      
+      <ion-grid >
+        <ion-row>
+          <!-- <ion-col size="2"></ion-col> -->
+          <ion-col size="8">
+            <br>
+            <br>
+            <ion-card>
+              <ion-card-content>
+
+                
+            <form [formGroup]="loginForm" (ngSubmit)="inicio()" class="form" action="">
+              <ion-item lines="none">
+      
+                <ion-icon name="call-outline" color="primary"></ion-icon>
+                <ion-label>Telefono:</ion-label>
+                <ion-input required formControlName="telefono" type="text" placeholder="Ingresa tu telefono"></ion-input>
+              </ion-item>
+      
+              <ion-item lines="none">
+                <ion-icon name="key-outline" color="warning"></ion-icon>
+                <ion-label>Password:</ion-label>
+                <ion-input required formControlName="password" type="password" placeholder="Ingresa tu password"></ion-input>
+              </ion-item>
+      
+      
+      
+              <ion-button [disabled]="!loginForm.valid" type="submit" expand="block" shape="round">
+                Iniciar Sesión
+              </ion-button>
+            </form>
+          </ion-card-content>
+
+
+
+
+        </ion-card>
+
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
 
       
 
 
-      <form [formGroup]="loginForm" (ngSubmit)="inicio()" class="form" action="">
-        <ion-item lines="none">
-
-          <ion-icon name="call-outline" color="primary"></ion-icon>
-          <ion-label>Telefono:</ion-label>
-          <ion-input required formControlName="telefono" type="text" placeholder="Ingresa tu telefono"></ion-input>
-        </ion-item>
-
-        <ion-item lines="none">
-          <ion-icon name="key-outline" color="warning"></ion-icon>
-          <ion-label>Password:</ion-label>
-          <ion-input required formControlName="password" type="text" placeholder="Ingresa tu password"></ion-input>
-        </ion-item>
-
-
-
-        <ion-button [disabled]="!loginForm.valid" type="submit" expand="block" shape="round">
-          Iniciar Sesión
-        </ion-button>
-      </form>
-
-    </ion-card-content>
-
-
-
-
-  </ion-card>
 
 </ion-content>
