--- a/src/app/sucursal/sucursal.page.html
+++ b/src/app/sucursal/sucursal.page.html
@@ -3,7 +3,7 @@
     <ion-item lines="none">
 
       <ion-title class="ion-text-center">
-        Administración de sucursales
+        Alta de punto de venta
       </ion-title>
       <ion-button (click)="salir()" expand="block" fill="clear" shape="round">
         Salir
@@ -17,8 +17,88 @@
 
 <ion-content>
 
-  <ion-button (click)="prueba()" expand="block"  shape="round">
+
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="10">
+<ion-card>
+  <ion-card-content>
+
+    <form [formGroup]="pvForm" (ngSubmit)="guardar()" class="form" action="">
+
+    <ion-list>
+
+      
+    
+      <ion-item>
+        <ion-label position="floating">Nombre Punto de venta</ion-label>
+        <ion-input required formControlName="nombre" placeholder="Punto de venta"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Nombre Dueño</ion-label>
+        <ion-input required formControlName="dueno" placeholder="Dueño"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Apellido</ion-label>
+        <ion-input required formControlName="apellido" placeholder="Dueño"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Telefono 1</ion-label>
+        <ion-input required formControlName="telefono1" type="text" placeholder="Ingresa tu telefono" type="number" ></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Telefono 2</ion-label>
+        <ion-input required formControlName="telefono2" placeholder="Telefono 2" type="number" type="number" ></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Domicilio</ion-label>
+        <ion-input required formControlName="domicilio"  placeholder="Domicilio"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Email</ion-label>
+        <ion-input required formControlName="email"  placeholder="Email"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Giro</ion-label>
+        <ion-select  required formControlName="giro"  placeholder="Selecciona una opcion">
+          <ion-select-option value="miscelanea">Miscelánea</ion-select-option>
+          <ion-select-option value="entretenimiento">Entretenimiento</ion-select-option>
+          <ion-select-option value="telecomunicaciones">Telecomunicaciones</ion-select-option>
+        </ion-select>
+      </ion-item>
+
+
+
+
+
+    </ion-list>
+    <br>
+  <!-- <ion-button  (click)="guardar(nombre,dueno,apellido,tel1,tel2,domicilio,email,giro)" expand="block"  shape="round"> -->
+    <ion-button [disabled]="!pvForm.valid" type="submit" expand="block" shape="round">
+    Guardar
+  </ion-button>   
+
+ </form>
+    
+  </ion-card-content>
+</ion-card>
+
+
+      </ion-col>
+      
+    </ion-row>
+  </ion-grid>
+
+
+  <!-- <ion-button (click)="prueba()" expand="block"  shape="round">
     Click me
-  </ion-button>
+  </ion-button> -->
 
 </ion-content>
