--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,48 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <ion-item lines="none">
+
+      <ion-title class="ion-text-center">
+        Listado de puntos de venta
+      </ion-title>
+      <ion-button (click)="salir()" expand="block" fill="clear" shape="round">
+        Salir
+      </ion-button>
+    </ion-item>
+
   </ion-toolbar>
+
+
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+<ion-content>
+
+  <ion-grid fixed>
+    <ion-row *ngFor="let item of data">
+      <ion-col size="10">
+
+        <ion-card>
+          <ion-card-content>
+
+            
+            <ion-item>
+              <ion-label>Punto de Venta: {{item.nombre}}</ion-label>  
+              <ion-button (click)="editar()" expand="block" fill="clear" shape="round">
+                Editar
+              </ion-button>
+            </ion-item>
+
+
+
+          </ion-card-content>
+        </ion-card>
+
+      </ion-col>
+      
+    </ion-row>
+  </ion-grid>
+
+  
+
 </ion-content>
