--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,14 +12,14 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon color="warning" name="bar-chart-outline"></ion-icon>
-      <ion-label>Progreso</ion-label>
+      <ion-icon color="primary" name="storefront"></ion-icon>
+      <ion-label>Listado PV</ion-label>
     </ion-tab-button>
  
 
   <ion-tab-button tab="sucursal">
-    <ion-icon color="primary" name="storefront"></ion-icon>
-    <ion-label>Sucursal</ion-label>
+    <ion-icon color="success" name="add"></ion-icon>
+    <ion-label>Alta PV</ion-label>
   </ion-tab-button>
 
 
