--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -8,7 +8,7 @@
 
     <ion-tab-button tab="tab2">
       <ion-icon color="success" name="cash-outline"></ion-icon>
-      <ion-label>Vendidos</ion-label>
+      <ion-label>Ventas</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
