--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,17 +2,17 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon color="danger" name="list-outline"></ion-icon>
-      <ion-label>Listado</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="tab2">
-      <ion-icon color="success" name="cash-outline"></ion-icon>
+      <ion-icon color="warning" name="ribbon"></ion-icon>
       <ion-label>Ventas</ion-label>
     </ion-tab-button>
 
+    <ion-tab-button tab="tab2">
+      <ion-icon color="primary" name="call"></ion-icon>
+      <ion-label>Asignación de sims</ion-label>
+    </ion-tab-button>
+
     <ion-tab-button tab="tab3">
-      <ion-icon color="primary" name="storefront"></ion-icon>
+      <ion-icon color="danger" name="storefront"></ion-icon>
       <ion-label>Listado PV</ion-label>
     </ion-tab-button>
  
