--- a/src/app/ventas-sims/ventas-sims.page.html
+++ b/src/app/ventas-sims/ventas-sims.page.html
@@ -63,7 +63,7 @@
           
           </ion-card>
 
-            <ion-button (click)="vender(data.ICCI)" expand="block" shape="round">
+            <ion-button (click)="vender(data.ICCI, data.DN, data.COMPANIA)" expand="block" shape="round">
             Vender
           </ion-button>   
 
