--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -147,7 +147,7 @@
   <label>COMPANIA: {{item.COMPANIA}}</label>
 </ion-item-divider>
 <ion-item-divider>
-  <label>PV: {{item.PV}}</label>
+  <label>PDV: {{item.PV}}</label>
 </ion-item-divider>
 <ion-item-divider>
   <label>FECHA VENTA: {{item.FECHA_VENTA}}</label>
