--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -29,9 +29,13 @@
             <ion-item-group>
 
               <ion-item-divider>
-              <ion-label> <ion-icon slot="start" color="primary" name="storefront"></ion-icon> {{item.nombre}}</ion-label>  
+              <ion-label> <ion-icon slot="start" color="danger" name="storefront"></ion-icon>PDV: {{item.nombre}}</ion-label>  
              
-    </ion-item-divider>
+    </ion-item-divider>  
+                <ion-item-divider>
+      <ion-label> <ion-icon slot="start" color="primary" name="navigate"></ion-icon>Dirección: {{item.domicilio}}</ion-label>  
+     
+</ion-item-divider>
   </ion-item-group>
 
             
