--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -13,13 +13,13 @@
 
     <ion-tab-button tab="tab3">
       <ion-icon color="danger" name="storefront"></ion-icon>
-      <ion-label>Listado PV</ion-label>
+      <ion-label>Listado PDV</ion-label>
     </ion-tab-button>
  
 
   <ion-tab-button tab="sucursal">
     <ion-icon color="success" name="add"></ion-icon>
-    <ion-label>Alta PV</ion-label>
+    <ion-label>Alta PDV</ion-label>
   </ion-tab-button>
 
 
