--- a/src/app/sucursal/sucursal.page.html
+++ b/src/app/sucursal/sucursal.page.html
@@ -36,12 +36,12 @@
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Nombre Dueño</ion-label>
+        <ion-label position="floating">Nombre</ion-label>
         <ion-input required formControlName="dueno" placeholder="Dueño"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Apellido</ion-label>
+        <ion-label position="floating">Apellidos</ion-label>
         <ion-input required formControlName="apellido" placeholder="Dueño"></ion-input>
       </ion-item>
 
