--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -2,8 +2,8 @@
   <ion-toolbar>
     <ion-item lines="none">
 
-      <ion-title class="ion-text-center">
-        Puntos de venta
+      <ion-title class="ion-text-center"> 
+        <ion-icon name="earth" color="success"></ion-icon> Puntos de venta 
       </ion-title>
       <ion-button (click)="salir()" expand="block" fill="clear" shape="round">
         Salir
