--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,13 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title class="ion-text-center">Login</ion-title>
+    <ion-item lines="none">
+
+      <ion-title class="ion-text-center">
+      Cellular Planet  <ion-icon color="danger" name="planet-outline" ></ion-icon>   
+      </ion-title>
+     
+    </ion-item>
+
   </ion-toolbar>
 
 
@@ -15,7 +22,7 @@
       <ion-grid >
         <ion-row>
           <!-- <ion-col size="2"></ion-col> -->
-          <ion-col size="10">
+          <ion-col size="12">
             <br>
             <br>
             <ion-card>
@@ -23,20 +30,24 @@
 
                 
             <form [formGroup]="loginForm" (ngSubmit)="inicio()" class="form" action="">
-              <ion-item lines="none">
+         
+            <ion-item-group>
+                <ion-item-divider>
       
                 <ion-icon name="call-outline" color="primary"></ion-icon>
                 <ion-label>Usuario:</ion-label>
-                <ion-input required formControlName="telefono" type="text" placeholder="Ingresa tu telefono"></ion-input>
-              </ion-item>
+                <ion-input required formControlName="telefono" type="text" placeholder=" Ingresa tu telefono"></ion-input>
+                </ion-item-divider>
       
-              <ion-item lines="none">
+                <ion-item-divider>
                 <ion-icon name="key-outline" color="warning"></ion-icon>
                 <ion-label>Password:</ion-label>
-                <ion-input required formControlName="password" type="password" placeholder="Ingresa tu password"></ion-input>
-              </ion-item>
+                <ion-input required formControlName="password" type="password" placeholder=" Ingresa tu password"></ion-input>
+                </ion-item-divider>
+              
+              </ion-item-group>
       
-      
+      <br>
       
               <ion-button [disabled]="!loginForm.valid" type="submit" expand="block" shape="round">
                 Iniciar Sesión
