--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,7 +2,6 @@
   <ion-toolbar>
     <ion-item lines="none">
 
-
       <ion-title class="ion-text-center">
         <ion-icon  name="person" color="primary"></ion-icon>   {{this.nombre_global}} 
       </ion-title>
@@ -15,6 +14,8 @@
 
 
 </ion-header>
+
+
 
 
 <ion-content>
@@ -90,11 +91,11 @@
 
 <ion-grid>
   <ion-row *ngIf="data">
-    <ion-col size="10">
+    <ion-col size="12">
 
 <ion-card> 
   <ion-card-content>
-    <ion-card-subtitle> Ventas de los últimos 7 días</ion-card-subtitle>
+    <ion-card-subtitle> Asignación de los últimos 7 días</ion-card-subtitle>
     
   </ion-card-content>
  <!-- <ion-label class="ion-text-wrap">Listado de ventas de los últimos 7 días</ion-label>  -->
@@ -144,7 +145,7 @@
   <label>ICC: {{item.ICCI}}</label>
 </ion-item-divider>
 <ion-item-divider>
-  <label>COMPANIA: {{item.COMPANIA}}</label>
+  <label>COMPAÑIA: {{item.COMPANIA}}</label>
 </ion-item-divider>
 <ion-item-divider>
   <label>PDV: {{item.PV}}</label>
