--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -3,7 +3,7 @@
     <ion-item lines="none">
 
       <ion-title class="ion-text-center">
-        Busqueda PDV
+        <ion-icon name="star" color="warning"></ion-icon> Asignación de SIMS 
       </ion-title>
       <ion-button (click)="salir()" expand="block" fill="clear" shape="round">
         Salir
@@ -15,14 +15,14 @@
 
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
 
 
 
 
   <ion-grid fixed>
     <ion-row>
-      <ion-col size="10">
+      <ion-col size="12">
 
         <ion-card>
 
