--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,23 +2,23 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon color="warning" name="ribbon"></ion-icon>
+      <ion-icon color="warning" name="rocket-outline"></ion-icon>
       <ion-label>Ventas</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon color="primary" name="call"></ion-icon>
+      <ion-icon color="primary" name="call-outline"></ion-icon>
       <ion-label>Asignación de sims</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon color="danger" name="storefront"></ion-icon>
+      <ion-icon color="danger" name="storefront-outline"></ion-icon>
       <ion-label>Listado PDV</ion-label>
     </ion-tab-button>
  
 
   <ion-tab-button tab="sucursal">
-    <ion-icon color="success" name="add"></ion-icon>
+    <ion-icon color="success" name="add-circle-outline"></ion-icon>
     <ion-label>Alta PDV</ion-label>
   </ion-tab-button>
 
