--- a/src/app/sucursal/sucursal.page.html
+++ b/src/app/sucursal/sucursal.page.html
@@ -36,13 +36,13 @@
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Nombre</ion-label>
-        <ion-input required formControlName="dueno" placeholder="Dueño"></ion-input>
+        <ion-label position="floating">Nombre de representante</ion-label>
+        <ion-input required formControlName="dueno" placeholder="Nombre de representante"></ion-input>
       </ion-item>
 
       <ion-item>
         <ion-label position="floating">Apellidos</ion-label>
-        <ion-input required formControlName="apellido" placeholder="Dueño"></ion-input>
+        <ion-input required formControlName="apellido" placeholder="Apellidos"></ion-input>
       </ion-item>
 
       <ion-item>
@@ -68,9 +68,8 @@
       <ion-item>
         <ion-label position="floating">Giro</ion-label>
         <ion-select  required formControlName="giro"  placeholder="Selecciona una opcion">
-          <ion-select-option value="miscelanea">Miscelánea</ion-select-option>
-          <ion-select-option value="entretenimiento">Entretenimiento</ion-select-option>
-          <ion-select-option value="telecomunicaciones">Telecomunicaciones</ion-select-option>
+          <ion-select-option value="telefonia">Telefonía</ion-select-option>
+          <ion-select-option value="otros">Otros</ion-select-option>
         </ion-select>
       </ion-item>
 
