--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon color="warning" name="rocket-outline"></ion-icon>
-      <ion-label>Asignaciones</ion-label>
+      <ion-label>Existencias por PDV</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
