--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,23 +3,23 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon color="warning" name="rocket-outline"></ion-icon>
-      <ion-label>Existencias por PDV</ion-label>
+      <ion-text class="ion-text-wrap">Existencias por PDV</ion-text>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon color="primary" name="call-outline"></ion-icon>
-      <ion-label>Asignación de sims</ion-label>
+      <ion-text class="ion-text-wrap">Asignación de sims</ion-text>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon color="danger" name="storefront-outline"></ion-icon>
-      <ion-label>Listado PDV</ion-label>
+      <ion-text class="ion-text-wrap">Listado PDV</ion-text>
     </ion-tab-button>
  
 
   <ion-tab-button tab="sucursal">
     <ion-icon color="success" name="add-circle-outline"></ion-icon>
-    <ion-label>Alta PDV</ion-label>
+    <ion-text class="ion-text-wrap">Alta PDV</ion-text>
   </ion-tab-button>
 
 
